--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     font-family: "Courier Prime", monospace;
     color: #fff;
+    font-weight: 600;
 }
 
 body {
@@ -29,6 +30,15 @@ body::before {
     backdrop-filter: blur(15px);
 }
 
+/*UTILITIES*/
+
+.regular-text {
+    font-weight: 400;
+}
+
+/*END OF UTILITIES*/
+
+
 /* MAIN CONTAINER */
 .main-container {
     width: 300px;
@@ -44,6 +54,7 @@ body::before {
 
 .input-container {
     position: relative;
+    margin-bottom: 20px;
 }
 
 .city-input {
@@ -78,3 +89,97 @@ body::before {
 }
 
 /* END OF INPUT CONTAINER */
+
+/* Section : Weather-info */
+
+.Weather-info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.location-data-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.location {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.weather-summary-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.weather-summary-img {
+    height: 128px;
+    width: 128px;
+}
+
+.weather-summary-info {
+    text-align: end;
+}
+
+.weather-condition-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.condition-item {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.condition-item span {
+    font-size: 30px;
+}
+
+.forecast-item-container {
+    display: flex;
+    gap: 15px;
+    overflow-x: scroll;
+    padding-bottom: 12px;
+}
+
+.forecast-item-container::-webkit-scrollbar {
+    height: 8px;
+}
+
+.forecast-item-container::-webkit-scrollbar-track {
+    background: rgb(0,0,0,0.1);
+    border-radius: 99px;
+}
+
+.forecast-item-container::-webkit-scrollbar-thumb {
+    background: rgb(0,0,0,0.15);
+    border-radius: 99px;
+}
+
+.forecast-item {
+    min-width: 78px;
+    background: rgb(255,255,255,0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 18px;
+    align-items: center;
+    border-radius: 12px;
+    transition: 0.3s background;
+}
+
+.forecast-item:hover {
+    background: rgb(255,255,255,0.15);
+}
+
+.forecast-item-img {
+    width: 35px;
+    height: 35px;
+}
+
+/* End of Section : Weather-info */
